@@ -1,3 +1,12 @@
+2006-03-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (cp_alloc) src/plot3d.c (sp_alloc): Our plot structures
+	have gained additional fields over the years, but not all of them were
+	being initialized on allocation. Switch to zeroing the entire structure
+	on allocation, then filling in the small number of non-zero fields.
+	Fixes rare segfault found while debugging "skip missing file" code due
+	to use of an uninitialized plot->p_count field.
+
 2006-03-10  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/datafile.c (df_open): Shift misplaced call to gp_expand_tilde.
